--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
-                tools:context="com.example.android.sunshine.app.DetailActivity.DetailFragment">
+                tools:context="com.kurkov.sunshine.DetailActivity.DetailFragment">
 
     <TextView
         android:id="@+id/detail_text"
